err/mod-pywebsocket.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mod_pywebsocket'...
Compiling './lib/python3.5/site-packages/mod_pywebsocket/_stream_base.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/_stream_base.py", line 121
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/_stream_hybi.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/_stream_hybi.py", line 548
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/common.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/common.py", line 242
    except ExtensionParsingException, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/dispatch.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/dispatch.py", line 146
    exec handler_definition in global_dic
                          ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/mod_pywebsocket/extensions.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/extensions.py", line 111
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mod_pywebsocket/handshake'...
Compiling './lib/python3.5/site-packages/mod_pywebsocket/handshake/__init__.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/handshake/__init__.py", line 93
    except HandshakeException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/handshake/_base.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/handshake/_base.py", line 114
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/handshake/hybi.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/handshake/hybi.py", line 118
    except HandshakeException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/headerparserhandler.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/headerparserhandler.py", line 202
    except dispatch.DispatchException, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/http_header_util.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/http_header_util.py", line 233
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/mux.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/mux.py", line 356
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/standalone.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/standalone.py", line 331
    except OpenSSL.SSL.SysCallError, (err, message):
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mod_pywebsocket/util.py'...
***   File "./lib/python3.5/site-packages/mod_pywebsocket/util.py", line 514
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mod_pywebsocket-0.7.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
